--- a/resource_planning/views/res_config_settings_views.xml
+++ b/resource_planning/views/res_config_settings_views.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- View for the settings-page based on the res.config.settings model-->
 <odoo>
     <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.form.inherit.resource</field>
