--- a/resource_planning/views/weekly_resource.xml
+++ b/resource_planning/views/weekly_resource.xml
@@ -83,7 +83,7 @@
         <record model="ir.actions.act_window" id="action_view_weekly">
             <field name="name">Employee centred</field>
             <field name="res_model">weekly_resource.model</field>
-            <field name="view_mode">pivot,graph,tree</field>
+            <field name="view_mode">pivot,graph</field>
             <field name="domain">[]</field>
         </record>
 
